# test_python_assignment

./: README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: tests.yml
src/test_assignment/: exercises.py
tests/: test_exercises.py
