[metadata]
name = test_assignment
author = Judit Acs
description = Test assignment
platforms = linux, osx, windows

[options]
packages =
    test_assignment
install_requires =
    wikipedia>=1.3
python_requires = >=3.6
package_dir = 
    = src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910

[options.package_data]
test_assignment = py.typed

[flake8]
max-line-length = 100
